// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiButtonContent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiButtonContent testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span />
</span>
`;

exports[`OuiButtonContent props children is rendered 1`] = `
<span
  class="ouiButtonContent"
>
  <span>
    Content
  </span>
</span>
`;

exports[`OuiButtonContent props iconSide is rendered 1`] = `
<span
  class="ouiButtonContent ouiButtonContent--iconRight"
>
  <span
    class="ouiButtonContent__icon"
    color="inherit"
    data-ouiicon-type="bolt"
  />
  <span />
</span>
`;

exports[`OuiButtonContent props iconType is rendered 1`] = `
<span
  class="ouiButtonContent"
>
  <span
    class="ouiButtonContent__icon"
    color="inherit"
    data-ouiicon-type="bolt"
  />
  <span />
</span>
`;

exports[`OuiButtonContent props isLoading is rendered 1`] = `
<span
  class="ouiButtonContent"
>
  <span
    class="ouiLoadingSpinner ouiLoadingSpinner--medium ouiButtonContent__spinner"
  />
  <span />
</span>
`;

exports[`OuiButtonContent props isLoading replaces iconType with spinner 1`] = `
<span
  class="ouiButtonContent"
>
  <span
    class="ouiLoadingSpinner ouiLoadingSpinner--medium ouiButtonContent__spinner"
  />
  <span />
</span>
`;

exports[`OuiButtonContent props textProps is rendered 1`] = `
<span
  class="ouiButtonContent"
>
  <span
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  />
</span>
`;
